--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
 </head>
+
 <body>
     <h1> ewdrftyghujik9ouyjtgfr</h1>
 
     <p>w2e34rt5y6uioukyjhtgrfedw
-    <div>
-        <div class="stuff"> <p>Zindleflop quibbly borkle snarf! Fropdoodle wibblesprig zunkleflap, gribbletash floopdoodle. Blorptastic drindleblop snerk whizzleplop, farnoodle kip zapzoodle! Slorpnark flibberwaggle, zibberquish doobleflick bumblequack. Snizzlefart wubblenook, glimfuzzle jorptang!</p></div>
-        <div class = "stufftwo">
-            <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421" class="img">
-            <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421" class="img">
-            <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421" class = "img">
+    <div class="container">
+        <div class="stufftwo">
+            <div class="images">
+            <div class="imageone">
+                <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421"
+                    class="img">
+                <figcaption> AAAAAAAAAAAAAAAGH</figcaption>
             </div>
+            <div class="imagetwo">
+                <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421"
+                    class="img">
+                <figcaption> AAAAAAAAAAAAAAAGH</figcaption>
+            </div>
+            <div class="imagethree">
+                <img src="https://assets.change.org/photos/8/jw/ax/QMjwAxeQAfcpoxs-800x450-noPad.jpg?1597557421"
+                    class="img">
+                <figcaption> AAAAAAAAAAAAAAAGH</figcaption>
+            </div>
+        </div>
+            <p>Flibberflop zindlewomp! Glorptastic fribble ziggorblats, squibbly doop zapfizzle. Wubbersnarf quixle
+                flumbadore, drindleflick doo-wop blargh. Splooshy wibbly wobblesnug, torkleflip zantoodle blarf!</p>
+        </div>
+        <div class="sidebar">
+            <p>Zindleflop quibbly borkle snarf! Fropdoodle wibblesprig zunkleflap, gribbletash floopdoodle. Blorptastic
+                drindleblop snerk whizzleplop, farnoodle kip zapzoodle! Slorpnark flibberwaggle, zibberquish doobleflick
+                bumblequack. Snizzlefart wubblenook, glimfuzzle jorptang!</p>
+        </div>
+        <div class="stuff">
+        </div>
     </div>
-    <p>Flibberflop zindlewomp! Glorptastic fribble ziggorblats, squibbly doop zapfizzle. Wubbersnarf quixle flumbadore, drindleflick doo-wop blargh. Splooshy wibbly wobblesnug, torkleflip zantoodle blarf!</p>
-    </body>
+
+</body>
+
 </html>
